<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activation_bg"
    tools:context=".view.activity.ActivationFormActivity"
    android:layout_gravity="right"
    android:gravity="right">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="vertical">

    <TextView
        android:text="@string/personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginRight="10dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/first_name"
          android:textSize="20sp"
          android:textColor="#000000"
          android:layout_marginTop="10dp"
          android:layout_marginRight="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="16"
            android:gravity="right"
            android:layout_gravity="right"
            android:id="@+id/txt_first_name"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="16"
            android:gravity="right"
            android:layout_gravity="right"
            android:id="@+id/txt_last_name"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="16"
            android:gravity="right"
            android:layout_gravity="right"
            android:id="@+id/txt_work"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginRight="10dp"/>

        <RadioGroup
            android:id="@+id/radio_receive_method"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_marginRight="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/btn_pick_up"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/btn_delivery"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:checked="true"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="right"/>


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_day"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:layout_marginRight="10dp"
            android:id="@+id/txt_birth_date"
            android:layout_gravity="right"
            android:gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="25sp"
            android:text="@string/call_info"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="16"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="16"
            android:layout_marginRight="10dp"
            android:id="@+id/txt_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="16"
            android:layout_marginRight="10dp"
            android:id="@+id/txt_mobile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_site"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="16"
            android:layout_marginRight="10dp"
            android:id="@+id/txt_web_site"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="16"
            android:layout_marginRight="10dp"
            android:id="@+id/txt_facebook"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="16"
            android:layout_marginRight="10dp"
            android:id="@+id/txt_city"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#0000ff"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:id="@+id/btn_register"
            android:background="@null"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
