<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.RateBusinessActivity"
    android:background="#E6E6E6">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:background="@android:color/background_dark"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#DDC6A4" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_arrow"
                android:textSize="30sp"
                android:text="@string/right_arrow"
                android:textColor="#000000"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/back"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/txt_arrow"
                android:layout_marginRight="7dp"
                android:id="@+id/txt_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_title"
                android:textSize="25sp"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/rate_business"/>


        </RelativeLayout>
    </LinearLayout>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:textColor="#B19E60"
        android:layout_below="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/send_rating"
        android:background="@null"
        android:id="@+id/btn_send_rating"/>
</RelativeLayout>
